src/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Fjalla+One&family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');

:root {
  --font-body: 'IBM Plex Sans', Verdana, sans-serif;
  --font-headline: 'Fjalla One', Helvetica, sans-serif;
  /* colors */
  --primary-color: #1b1a17;
  --secondary-color: #2ff4b9;
  --tertiary-color: #e6e6ea;
  --dark-grey: #292823;

  /* sizes */
  --font-base: 16px;
  --small-font: 0.8rem;
  --large-font: 1.2rem;
  --border-radius: 0.5rem;
}

* {
  box-sizing: border-box;
}

body {
  margin: 0;
  font-family: var(--font-body);
  font-size: var(--font-base);
  background-color: var(--primary-color);
  color: var(--tertiary-color);
  min-width: 320px;
}

img {
  max-width: 100%;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: var(--font-headline);
}

main {
  margin: 0 auto;
  max-width: 1280px;
}

/* Header styles */
header {
  display: flex;
  flex-direction: row;
  align-items: start;
  text-align: center;
  padding: 0.8rem;
  justify-content: space-between;
  position: relative;
}

.title-header {
  margin: 0;
}

.line-header {
  background: radial-gradient(
    circle at center,
    var(--secondary-color),
    transparent 100%
  );
  height: 1px;
  width: 100%;
  position: absolute;
  top: 85%;
  z-index: -1;
  left: 0;
  right: 0;
}

.links-nav {
  display: none;
  padding: 0;
  list-style: none;
  padding: 0;
}

.links-nav li {
  box-sizing: border-box;
  list-style: none;
  transition: 0.4s;
}

.links-nav li a {
  display: block;
  padding: 1rem 0;
  text-decoration: none;
  color: var(--tertiary-color);
  width: 100%;
  font-size: 1.2rem;
  transition: 0.4s;
}

.open {
  box-sizing: border-box;
  display: block;
  position: absolute;
  left: 0;
  width: 100%;
  height: 100svh;
  text-align: center;
  background-color: var(--primary-color);
  z-index: 1;
  padding: 40% 0;
}

.open li a {
  color: var(--tertiary-color);
}

.open li:hover a {
  color: var(--secondary-color);
}

.stop-scroll {
  overflow: hidden;
}

/* Hamburger Menu btn */
.menu-btn {
  background-color: transparent;
  border: none;
  cursor: pointer;
  padding: 0;
  width: 38px;
  height: 38px;
  transition: 0.2s;
}

.line {
  fill: none;
  stroke: var(--secondary-color);
  stroke-width: 6;
  transition:
    stroke-dasharray 500ms cubic-bezier(0.4, 0, 0.2, 1),
    stroke-dashoffset 500ms cubic-bezier(0.4, 0, 0.2, 1);
}

.line1 {
  stroke-dasharray: 60 207;
  stroke-width: 6;
}
.line2 {
  stroke-dasharray: 60 60;
  stroke-width: 6;
}
.line3 {
  stroke-dasharray: 60 207;
  stroke-width: 6;
}
.opened .line1 {
  stroke-dasharray: 90 207;
  stroke-dashoffset: -134;
  stroke-width: 6;
}
.opened .line2 {
  stroke-dasharray: 1 60;
  stroke-dashoffset: -30;
  stroke-width: 6;
}
.opened .line3 {
  stroke-dasharray: 90 207;
  stroke-dashoffset: -134;
  stroke-width: 6;
}

/* Hero section styles */
.divider {
  margin-bottom: 1.5rem;
  padding: 0.8rem;
}

.hero-img {
  max-width: 500px;
  margin: 2.5rem 0;
}

.hero-msg h2 {
  font-family: var(--font-headline);
  color: var(--tertiary-color);
  margin: 0;
}

/* Browse competitions button style */
.button-container {
  display: flex;
  justify-content: center;
}

#searchCompts {
  background-color: var(--tertiary-color);
  color: var(--primary-color);
  padding: 0.8rem;
  text-decoration: none;
  font-family: var(--font-headline);
  margin: 1rem 0;
}

/* Latest matches section styles */
.latest-matches {
  color: var(--primary-color);
  background-color: var(--secondary-color);
  height: 100vh;
  overflow-y: scroll;
}

.latest-matches::-webkit-scrollbar {
  width: 6px;
}

.latest-matches::-webkit-scrollbar-thumb {
  background-color: var(--dark-grey);
  border-radius: var(--border-radius);
}

.match-container {
  display: flex;
  flex-direction: column;
  background-color: var(--dark-grey);
  color: var(--tertiary-color);
  text-align: center;
  border-radius: var(--border-radius);
  margin-bottom: 1.5rem;
  padding: 0.4rem;
}

.matchInfo {
  display: flex;
  flex-direction: row;
  justify-content: center;
  gap: 0.3rem;
}

.matchInfo > * {
  flex: 1;
}

.teamHome,
.teamAway {
  display: grid;
  grid-template-rows: 100px 5ch 0.5fr;
}

.teamTitle {
  margin: auto 0;
}

.teamLogo {
  display: flex;
  align-items: center;
  height: 100px;
}

.teamLogo img {
  width: 70%;
  max-width: 100px;
  margin: auto;
}

.match-status {
  flex: none;
}

.match-status p {
  font-weight: bold;
}

/* Top leagues section styles */
.top-leagues h2 {
  margin-top: 0;
}

#leagues-container {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
  gap: 1rem;
}

.league-container {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  align-items: center;
  border-radius: var(--border-radius);
  background-color: var(--tertiary-color);
  width: 100%;
  height: 130px;
  padding: 0.5rem;
  gap: 0.5rem;
}

.league-container img {
  margin: 0 auto;
  max-height: 100px;
}

.leagueTitle {
  color: var(--primary-color);
  font-size: medium;
}

.leagueCountry {
  display: block;
  font-size: smaller;
  font-weight: lighter;
}

/* footer styles */
.footer-ele {
  list-style: none;
  padding-left: 0;
  display: flex;
  flex-direction: row;
  margin: 0;
  background-color: var(--dark-grey);
  padding: 0.8rem;
  justify-content: space-between;
  align-items: center;
}

.footer-ele a {
  text-decoration: none;
  color: var(--tertiary-color);
  margin: 0.2rem 0;
  transition: 0.4s;
}

.footer-ele a:hover {
  color: var(--secondary-color);
}

#logo-foot {
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: 0.5rem;
}

#logo-foot p {
  font-family: var(--font-headline);
  font-size: larger;
}

.links-foot {
  display: flex;
  flex-direction: column;
  text-align: end;
  justify-content: center;
}

/* ------------ Leagues Table Page styles ------------ */
#myLeaguesCont {
  width: 100%;
}

.table-leagues h2 {
  margin-top: 0;
}

.fade-transition {
  animation: myEntrance 0.5s ease;
}

@keyframes myEntrance {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

.containerName {
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: 0.5rem;
}

.tableImg {
  height: 25px;
  vertical-align: middle;
}

caption,
th {
  text-align: left;
}

tr:nth-of-type(2n-1) {
  background-color: var(--dark-grey);
}

th,
td {
  padding: 0.5rem;
}

th {
  display: none;
}

td {
  display: grid;
  grid-template-columns: 10ch auto;
  gap: 0.5rem;
  align-items: center;
}

td::before {
  content: attr(data-cell) ': ';
  font-weight: bold;
}

.league-link {
  color: var(--tertiary-color);
}

#paginationBtn {
  display: flex;
  justify-content: center;
  align-items: center;
  margin-top: 1rem;
  gap: 0.2rem;
}

.pageBtn {
  border: none;
  background-color: var(--secondary-color);
  border-radius: var(--border-radius);
  color: var(--primary-color);
  padding: 0.2rem 0.5rem;
}

.labelInput {
  margin-bottom: 1rem;
  display: block;
}

.inputLeagues {
  border: none;
  padding: 0.3rem;
  border-radius: var(--border-radius);
}

.inputLeagues:focus {
  outline: none;
}

/* ------------ Leagues Table Page styles ------------ */
.league-info h2 {
  margin: 0;
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: 0.5rem;
}

.imgLeagueInfo img {
  height: 70px;
}

.teamsContainer {
  width: 100%;
  overflow-x: scroll;
}

.teamsContainer::-webkit-scrollbar {
  height: 6px;
}

.teamsContainer::-webkit-scrollbar-thumb {
  background-color: var(--secondary-color);
  border-radius: var(--border-radius);
}

#myPositionsCont th,
#myPositionsCont td {
  display: table-cell;
}

#myPositionsCont th {
  font-size: 0.8rem;
}

#myPositionsCont td::before {
  content: '';
}

/* Match League Card Styles */
.leagueGamesCont {
  background-color: var(--secondary-color);
  color: var(--primary-color);
}

.gamesContainer {
  display: flex;
  flex-direction: row;
  gap: 1rem;
  overflow-x: scroll;
  width: 100%;
}

.gamesContainer::-webkit-scrollbar {
  height: 6px;
}

.gamesContainer::-webkit-scrollbar-thumb {
  background-color: var(--primary-color);
  border-radius: var(--border-radius);
}

.gamesContainer .match-container {
  min-width: 100%;
}

.gameDate {
  margin-bottom: 0.2rem;
}

.gameStadium {
  font-size: small;
  margin-top: 0;
}

@media screen and (min-width: 600px) {
  th,
  td {
    display: table-cell;
  }

  th {
    font-size: 0.8rem;
  }

  td::before {
    content: '';
  }

  .gamesContainer .match-container {
    min-width: 350px;
  }
}

